--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "server.js",
   "type": "module",
+  "scripts": {
+    "test": "pta test/*.test.js",
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "fastify": "^3.15.0",
     "fastify-sensible": "~3.1.1",
@@ -15,10 +19,6 @@
     "nodemon": "^2.0.7",
     "pta": "^0.2.3",
     "sbuts": "^0.4.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
